--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,8 @@
-NODE_ENV=development
+NODE_ENV=production
 APP_NAME=merchandise_service
 PORT=3000
 
-MONGODB_URI=mongodb+srv://hthang0308a:hthang0308a@cluster0.c9us9.mongodb.net/merchandise
+MONGODB_URI=mongodb+srv://hthang0308a:hthang0308a@cluster0.c9us9.mongodb.net/webtwomidterm
 API_LOGGER=false
 
-ID_SERVICE_HOST=https://apitest.taptap.com.vn/guard/v3/idservice
-ID_SERVICE_SECRET=f73e2e46-acd0-49c5-93a7-8e370c8b3828
-ID_SERVICE_NAME=authentication-service
-
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_PREFIX=merchandise_cms
-
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_REGION=
-AWS_BUCKET=
-
-TCL_PROMOTION_SERVICE_HOST=https://apitest.taptap.com.vn/tcl/v3/promotion
-
-STORE_CODE=taptapmerch
+JWT_SECRET=244466666
