frontend url env

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ NODE_ENV=production
 APP_NAME=merchandise_service
 PORT=3000
 BASE_URL=http://localhost:3000
+FRONTEND_URL=http://localhost:5173
 
 MONGODB_URI=mongodb+srv://hthang0308a:hthang0308a@cluster0.c9us9.mongodb.net/webtwomidterm
 API_LOGGER=false
