--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.1.4",
+    "@nestjs/serve-static": "^3.0.0",
     "@nestjs/swagger": "^6.1.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/multer": "^1.4.7",
