--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 NODE_ENV=production
-APP_NAME=merchandise_service
+APP_NAME=classroom_backend
 PORT=3000
 BASE_URL=http://localhost:3000
 FRONTEND_URL=http://localhost:5173
 
-MONGODB_URI=mongodb+srv://hthang0308a:hthang0308a@cluster0.c9us9.mongodb.net/webtwomidterm
+MONGODB_URI=
 API_LOGGER=false
 
 JWT_SECRET=244466666
