--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.1.4",
+    "@nestjs/platform-socket.io": "^9.2.1",
     "@nestjs/serve-static": "^3.0.0",
     "@nestjs/swagger": "^6.1.2",
+    "@nestjs/websockets": "^9.2.1",
     "@types/cookie-parser": "^1.4.3",
     "@types/multer": "^1.4.7",
     "@types/passport": "^1.0.11",
