--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,12 @@ PORT=3000
 BASE_URL=http://localhost:3000
 FRONTEND_URL=http://localhost:5173
 
-MONGODB_URI=mongodb+srv://hthang0308a:hthang0308a@cluster0.c9us9.mongodb.net/webtwomidterm
+MONGODB_URI=
 API_LOGGER=false
 
 JWT_SECRET=244466666
 
-REDIS_HOST=singapore-redis.render.com
-REDIS_PORT=6379
-REDIS_USERNAME=red-ceesbvcgqg4b3h9m18mg
-REDIS_PASSWORD=rpepMzolorvZBJ3Em0EBrJK5FXbsjDVv
+REDIS_HOST=
+REDIS_PORT=
+REDIS_USERNAME=
+REDIS_PASSWORD=
