--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_NAME=classroom_backend
 PORT=3000
 BASE_URL=http://localhost:3000
 FRONTEND_URL=http://localhost:5173
+ENABLE_CORS=true
 
 MONGODB_URI=
 API_LOGGER=false
